# agrb

./: .gitmodules  CMakeLists.txt  README.md
cmake/: manifest.cmake
cmake/templates/: app.manifest.in  test.cpp.in  version.h.in
include/agrb/: agrb.hpp  buffer.hpp  defaults.hpp  descriptors.hpp  device.hpp  device_adapter.hpp  framebuffer.hpp  pipeline.hpp  pool.hpp  texture.hpp  utils.hpp  vector.hpp
include/agrb/utils/: buffer.hpp  exec.hpp  image.hpp  memory.hpp
src/: agrb.cpp  descriptors.cpp  device.cpp  device_adapter.cpp  framebuffer.cpp  pipeline.cpp  texture.cpp  utils.cpp  vk_mem_alloc.cpp
src/utils/: buffer.cpp  exec.cpp  image.cpp
tests/: CMakeLists.txt  buffer.cpp  descriptors.cpp  env.cpp  env.hpp  pipeline.cpp  utils.cpp  vector.cpp
tests/data/: env.yaml  shaders.yaml  test.frag  test.vert
tools/: README.md  get_shaders_ns.py  run_pack_cmd.cmake  run_shader_cmds.cmake  shader_builder.py  shader_tools.cmake
tools/s2u/: CMakeLists.txt  README.md  main.cpp
